--- a/package.json
+++ b/package.json
@@ -5,12 +5,26 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon app.js"
+    "start": "npx nodemon app.js",
+    "build": "vite build",
+    "deploy": "gh-pages -d public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/d0ll0b/VUE_W3.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/d0ll0b/VUE_W3/issues"
+  },
+  "homepage": "https://github.com/d0ll0b/VUE_W3#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.3",
+    "vite": "^5.0.12"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
